<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <parent>
    <groupId>org.bithon</groupId>
    <artifactId>bithon</artifactId>
    <version>1.0-SNAPSHOT</version>
    <relativePath>../../pom.xml</relativePath>
  </parent>
  <modelVersion>4.0.0</modelVersion>

  <artifactId>component-brpc</artifactId>

  <properties>
    <maven.compiler.source>8</maven.compiler.source>
    <maven.compiler.target>8</maven.compiler.target>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.bithon.shaded</groupId>
      <artifactId>shaded-slf4j</artifactId>
      <version>1.0-SNAPSHOT</version>
    </dependency>
    <dependency>
      <groupId>org.bithon.shaded</groupId>
      <artifactId>shaded-netty</artifactId>
      <version>1.0-SNAPSHOT</version>
    </dependency>
    <dependency>
      <groupId>org.bithon.shaded</groupId>
      <artifactId>shaded-protobuf</artifactId>
      <version>1.0-SNAPSHOT</version>
    </dependency>
    <dependency>
      <groupId>org.bithon.shaded</groupId>
      <artifactId>shaded-jackson</artifactId>
      <version>1.0-SNAPSHOT</version>
    </dependency>

    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.2</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
      <version>30.1.1-jre</version>
      <scope>test</scope>
    </dependency>
  </dependencies>


<!--  <build>-->
<!--    <plugins>-->
<!--      <plugin>-->
<!--        <groupId>org.apache.maven.plugins</groupId>-->
<!--        <artifactId>maven-shade-plugin</artifactId>-->
<!--        <version>3.2.4</version>-->
<!--        <executions>-->
<!--          <execution>-->
<!--            <phase>package</phase>-->
<!--            <goals>-->
<!--              <goal>shade</goal>-->
<!--            </goals>-->
<!--            <configuration>-->
<!--              <relocations>-->
<!--                <relocation>-->
<!--                  <pattern>org.slf4j</pattern>-->
<!--                  <shadedPattern>shaded.org.slf4j</shadedPattern>-->
<!--                </relocation>-->
<!--                <relocation>-->
<!--                  <pattern>com.fasterxml.jackson</pattern>-->
<!--                  <shadedPattern>shaded.com.fasterxml.jackson</shadedPattern>-->
<!--                </relocation>-->
<!--                <relocation>-->
<!--                  <pattern>com.google.protobuf</pattern>-->
<!--                  <shadedPattern>shaded.com.google.protobuf</shadedPattern>-->
<!--                </relocation>-->
<!--                <relocation>-->
<!--                  <pattern>io.netty</pattern>-->
<!--                  <shadedPattern>shaded.io.netty</shadedPattern>-->
<!--                </relocation>-->
<!--              </relocations>-->
<!--            </configuration>-->
<!--          </execution>-->
<!--        </executions>-->
<!--      </plugin>-->
<!--    </plugins>-->
<!--  </build>-->

</project>